# m33mu

./: .gitignore  CMakeLists.txt  Makefile  README.md  m33mu.1
cpu/mcxw71c/: cpu_config.h  mcxw71c_mmio.c  mcxw71c_mmio.h  mcxw71c_spi.c  mcxw71c_spi.h  mcxw71c_timers.c  mcxw71c_timers.h  mcxw71c_usart.c  mcxw71c_usart.h
cpu/nrf5340/: cpu_config.h  nrf5340_mmio.c  nrf5340_mmio.h  nrf5340_timers.c  nrf5340_timers.h  nrf5340_uart_spi.c  nrf5340_uart_spi.h  nrf5340_wdt.c  nrf5340_wdt.h
cpu/stm32h563/: cpu_config.h  stm32h563_eth.c  stm32h563_eth.h  stm32h563_mmio.c  stm32h563_mmio.h  stm32h563_spi.c  stm32h563_spi.h  stm32h563_timers.c  stm32h563_timers.h  stm32h563_usart.c  stm32h563_usart.h  stm32h563_usb.c  stm32h563_usb.h
cpu/stm32l552/: cpu_config.h  stm32l552_mmio.c  stm32l552_mmio.h  stm32l552_spi.c  stm32l552_spi.h  stm32l552_timers.c  stm32l552_timers.h  stm32l552_usart.c  stm32l552_usart.h
cpu/stm32u585/: cpu_config.h  stm32u585_mmio.c  stm32u585_mmio.h  stm32u585_spi.c  stm32u585_spi.h  stm32u585_timers.c  stm32u585_timers.h  stm32u585_usart.c  stm32u585_usart.h
include/m33mu/: capstone.h  chario.h  core_sys.h  cpu.h  cpu_db.h  decode.h  dma.h  eth_backend.h  exc_return.h  exception.h  exec_helpers.h  execute.h  fetch.h  flash_persist.h  gdbstub.h  gpio.h  irq.h  mem.h  mem_prot.h  memmap.h  mmio.h  mpu.h  nvic.h  runloop.h  sau.h  scheduler.h  scs.h  spi_bus.h  spiflash.h  table_branch.h  target.h  target_hal.h  timer.h  tpm_tis.h  types.h  tz.h  usbdev.h  vector.h
src/: core_interfaces.c  core_sys.c  cpu_db.c  exc_return.c  execute.c  flash_persist.c  gdbstub.c  main.c  memmap.c  nvic.c  runloop.c  scs.c  system_reset.c  target_hal.c  timer.c  vector.c
src/m33mu/: capstone.c  capstone_stub.c  cpu.c  decode.c  eth_backend.c  exception.c  exec_helpers.c  fetch.c  mem.c  mem_prot.c  mpu.c  sau.c  spi_bus.c  spiflash.c  table_branch.c  tpm_tis.c  tz.c  usbdev.c
tests/: cpu_banks_test.c  decode_capstone_alu_test.c  decode_capstone_branch_test.c  decode_phase1_test.c  decode_phase2_test.c  decode_phase3_test.c  exc_return_test.c  exception_vector_test.c  exclusive_monitor_test.c  exec_capstone_alu_flags_test.c  exec_curve_load_alu_test.c  exec_ecc_alu_chain_test.c  exec_ed25519_ctx_sanity_test.c  exec_helper_test.c  exec_longmul_test.c  exec_sp_clamp_ct_test.c  exec_sp_limit_test.c  exec_verify_authenticity_test.c  fetch_test.c  memmap_test.c  mpu_test.c  nvic_test.c  prot_sau_nsc_test.c  runloop_test.c  sau_test.c  scs_test.c  table_branch_test.c  tz_branch_test.c  vector_test.c
tests/firmware/test-cortex-m33/: Makefile  isa_sweeper.c  main.c  target.ld
tests/firmware/test-mcxw/: ivt.c  main.c  target.ld
tests/firmware/test-nrf5340/: main.c  target.ld
tests/firmware/test-rtos-exceptions/: Makefile  ivt.c  rtos_exception_test.c
tests/firmware/test-stm32h563/: main.c  tpm_nv.permall
tests/firmware/test-stm32l552/: main.c  target.ld
tests/firmware/test-stm32u585/: .gdbinit  main.c  tpm_nv.permall
tests/firmware/test-systick-wfi/: Makefile  systick_wfi_test.c  target.ld
tests/firmware/test-tz-bxns-cmse-sau-mpu/: Makefile  memory_map.h
tests/firmware/test-tz-bxns-cmse-sau-mpu/common/: memory_map.h
tests/firmware/test-tz-bxns-cmse-sau-mpu/nonsecure/: nonsecure.ld  nonsecure_main.c
tests/firmware/test-tz-bxns-cmse-sau-mpu/secure/: secure.ld  secure_main.c
tests/vectors/: alu_capstone_flags_vectors.txt  alu_capstone_vectors.txt  branch_capstone_vectors.txt
tui/: termbox.h  termbox2.c  tui.c  tui.h  tui_stub.c
